--- a/settings.ini
+++ b/settings.ini
@@ -11,4 +11,4 @@ mdrklassik = http://avw.mdr.de/livestreams/mdr_klassik_live_128.m3u
 radioeins = http://www.radioeins.de/live.m3u
 swr2 = http://mp3-live.swr.de/swr2_m.m3u
 wdr3 = http://www.wdr.de/wdrlive/media/mp3/wdr3_hq.m3u
-radjo1 = http://stream3.polskieradio.pl:8900/listen.pls
+oln = http://213.73.25.178:7055
